Semana 4 de python

--- a/Python/ExerciciosUnivesp/lista/lista1/Lista_1_-_Resolver_2.ipynb
+++ b/Python/ExerciciosUnivesp/lista/lista1/Lista_1_-_Resolver_2.ipynb
@@ -17,10 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ola, mundo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ola, mundo!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -31,10 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número informado foi 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = input(\"Digite número\")\n",
+    "print(f\"O número informado foi {numero}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número informado foi 5\n",
+      "O número informado foi 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"O número informado foi\",int(numero))\n",
+    "print(\"O número informado foi\",float(numero))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,10 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A soma total é de 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def f(n1):\n",
+    "    resultado = n1 ** 2 + 1\n",
+    "    print(f\"A soma total é de {resultado}\")\n",
+    "\n",
+    "    ##função termina\n",
+    "f(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A media do aluno foi de: 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nota():    \n",
+    "    notas = []\n",
+    "    somaTotal = 0\n",
+    "    for element in range(4):\n",
+    "        notas.append(float(input(f\"Digite a nota {element + 1} \")))\n",
+    "    somaTotal = sum(notas)\n",
+    "    print(f\"A media do aluno foi de: {somaTotal / 4}\")\n",
+    "nota()\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,10 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000.0  centimetros\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(float(input(\"Digite a quantidade de metros\")) * 100 , \" centimetros\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor da area é de 314.1592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as m\n",
+    "r = float(input(\"Digite o valor do raio\"))\n",
+    "\n",
+    "area = m.pi * r ** 2\n",
+    "print(f\"O valor da area é de {area}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,10 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O salario do mês é 800.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "valorHora = float(input(\"Digite o valor a sua hora\"))\n",
+    "horasTrabalhados = int(input(\"Digite as horas trabalhadas no mes\"))\n",
+    "salario = valorHora * horasTrabalhados\n",
+    "print(f\"O salario do mês é {salario}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +240,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.055555555555557\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = float(input(\"Digite a temperatura em fahrenheit\"))\n",
+    "temperatura = (5 * (f -32) / 9)\n",
+    "print(temperatura)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,10 +268,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05/05/1987\n"
+     ]
+    }
+   ],
+   "source": [
+    "dia = input(\"Digite o dia\")\n",
+    "mes = input(\"Digite o mes\")\n",
+    "ano = input(\"Digite o ano\")\n",
+    "\n",
+    "print(dia, mes, ano, sep=\"/\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +300,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "8.0\n",
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeroUm = int(input(\"Digite o primeiro número\"))\n",
+    "numeroDois = int(input(\"Digite o segunto número\"))\n",
+    "numeroTres = float(input(\"Digite o terceiro número\"))\n",
+    "itemA = (numeroUm * 2) * (numeroDois / 2)\n",
+    "print(itemA)\n",
+    "itemB = 3 * numeroUm + numeroTres\n",
+    "print(itemB)\n",
+    "itemC = numeroTres ** 3\n",
+    "print(itemC)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,10 +336,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.864197530864196\n"
+     ]
+    }
+   ],
+   "source": [
+    "peso = float(input(\"Digite o seu peso\"))\n",
+    "altura = float(input(\"Digite a sua altura\"))\n",
+    "imc = peso / (altura ** 2)\n",
+    "print(f\"{imc:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,10 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R$ 11.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor = float(input(\"Digite o valor monetario\"))\n",
+    "correcao = valor * 1.15\n",
+    "print(f\"R$ {correcao:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,10 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R$ 8.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "correcao = valor * 0.85\n",
+    "print(f\"R$ {correcao:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
